--- a/install.html
+++ b/install.html
@@ -1,1 +1,7 @@
+<html>
+  <head>
+  </head>
+  <body>
 <a href="itms-services://?action=download-manifest&url=https://github.com/somebodydie/ios-itemservice-install-/blob/master/manifest.plist">IOS install</a>
+  </body>
+</html>
